--- a/index.html
+++ b/index.html
@@ -576,7 +576,8 @@
                     <span style="background: var(--bg-secondary); padding: 8px 16px; border-radius: 20px; font-size: 14px;">🎯 全アプリ対応</span>
                     <span style="background: var(--bg-secondary); padding: 8px 16px; border-radius: 20px; font-size: 14px;">✈️ オフライン文字起こし</span>
                 </div>
-                <a href="https://apps.apple.com/jp/app/id6756238386" class="cta-button">App Storeでダウンロード</a>
+                <!-- TODO: 審査通過後に戻す <a href="https://apps.apple.com/jp/app/id6756238386" class="cta-button">App Storeでダウンロード</a> -->
+                <span class="cta-button" style="opacity: 0.7; cursor: default;">Coming Soon</span>
             </div>
         </section>
 
@@ -879,7 +880,8 @@
             <div class="container">
                 <h2>Recmoで、会議をもっとシンプルに。</h2>
                 <p class="subtitle">会話に集中。記録はRecmoに任せて。</p>
-                <a href="https://apps.apple.com/jp/app/id6756238386" class="cta-button">App Storeでダウンロード</a>
+                <!-- TODO: 審査通過後に戻す <a href="https://apps.apple.com/jp/app/id6756238386" class="cta-button">App Storeでダウンロード</a> -->
+                <span class="cta-button" style="opacity: 0.7; cursor: default;">Coming Soon</span>
             </div>
         </section>
     </main>
