--- a/index.html
+++ b/index.html
@@ -890,6 +890,7 @@
         <div class="container">
             <div class="links">
                 <a href="privacy.html">プライバシーポリシー</a>
+                <a href="mailto:support@recmo.me">お問い合わせ</a>
             </div>
             <p>&copy; 2025 Recmo. All rights reserved.</p>
             <p style="font-style: italic; margin-top: 8px;">Record + Memo = Recmo</p>
