--- a/en.html
+++ b/en.html
@@ -890,6 +890,7 @@ Summaries: ~/Obsidian/Meeting Notes/</pre>
         <div class="container">
             <div class="links">
                 <a href="privacy-en.html">Privacy Policy</a>
+                <a href="mailto:support@recmo.me">Contact</a>
             </div>
             <p>&copy; 2025 Recmo. All rights reserved.</p>
             <p style="font-style: italic; margin-top: 8px;">Record + Memo = Recmo</p>
