利用規約追加

--- a/en.html
+++ b/en.html
@@ -890,6 +890,7 @@ Summaries: ~/Obsidian/Meeting Notes/</pre>
         <div class="container">
             <div class="links">
                 <a href="privacy-en.html">Privacy Policy</a>
+                <a href="terms-en.html">Terms of Use</a>
                 <a href="mailto:support@recmo.me">Contact</a>
             </div>
             <p>&copy; 2025 Recmo. All rights reserved.</p>
