--- a/privacy.html
+++ b/privacy.html
@@ -352,6 +352,7 @@
         <div class="container">
             <div class="links">
                 <a href="index.html">ホーム</a>
+                <a href="terms.html">利用規約</a>
             </div>
             <p>&copy; 2025 Recmo. All rights reserved.</p>
         </div>
