--- a/privacy-en.html
+++ b/privacy-en.html
@@ -352,6 +352,7 @@
         <div class="container">
             <div class="links">
                 <a href="en.html">Home</a>
+                <a href="terms-en.html">Terms of Use</a>
             </div>
             <p>&copy; 2025 Recmo. All rights reserved.</p>
         </div>
