--- a/en.html
+++ b/en.html
@@ -576,8 +576,7 @@
                     <span style="background: var(--bg-secondary); padding: 8px 16px; border-radius: 20px; font-size: 14px;">🎯 Works with Any App</span>
                     <span style="background: var(--bg-secondary); padding: 8px 16px; border-radius: 20px; font-size: 14px;">✈️ Offline Transcription</span>
                 </div>
-                <!-- TODO: 審査通過後に戻す <a href="https://apps.apple.com/app/id6756238386" class="cta-button">Download on the App Store</a> -->
-                <span class="cta-button" style="opacity: 0.7; cursor: default;">Coming Soon</span>
+                <a href="https://apps.apple.com/app/id6756238386" class="cta-button">Download on the App Store</a>
             </div>
         </section>
 
@@ -880,8 +879,7 @@ Summaries: ~/Obsidian/Meeting Notes/</pre>
             <div class="container">
                 <h2>Simplify Your Meetings with Recmo.</h2>
                 <p class="subtitle">Focus on the conversation. Let Recmo handle the rest.</p>
-                <!-- TODO: 審査通過後に戻す <a href="https://apps.apple.com/app/id6756238386" class="cta-button">Download on the App Store</a> -->
-                <span class="cta-button" style="opacity: 0.7; cursor: default;">Coming Soon</span>
+                <a href="https://apps.apple.com/app/id6756238386" class="cta-button">Download on the App Store</a>
             </div>
         </section>
     </main>
