--- a/privacy.html
+++ b/privacy.html
@@ -298,16 +298,45 @@
                 <strong>重要</strong>: 要約機能は任意です。APIキーを設定しない場合、文字起こしテキストがクラウドに送信されることはありません。録音と文字起こし機能は完全にオフラインで動作します。
             </div>
 
-            <h2>4. 必要な権限</h2>
-            <p>本アプリは以下のシステム権限を必要とします：</p>
+            <h2>4. 画面収録権限について</h2>
+
+            <h3>なぜ画面収録権限が必要なのか</h3>
+            <p>本アプリは、macOSの「画面収録」権限を使用して<strong>システム音声（他のアプリケーションから再生される音声）のみ</strong>をキャプチャします。これは、Zoom、Google Meet、Microsoft Teamsなどのビデオ会議アプリの音声を録音するために必要です。</p>
+
+            <div class="note">
+                <strong>重要</strong>: 本アプリは画面収録権限を使用しますが、<strong>画面の映像（スクリーンショット、ビデオフレーム、画面画像）は一切キャプチャ・保存しません</strong>。macOSでは、他のアプリケーションの音声ストリームにアクセスするために、技術的に画面収録権限（ScreenCaptureKit）が必要となります。これはAppleのシステム要件であり、音声のみを取得する場合でもこの権限が必須です。
+            </div>
+
+            <h3>画面収録で収集するデータ</h3>
+            <ul>
+                <li><strong>収集するデータ</strong>: 選択したアプリケーションからのシステム音声出力のみ（例：ビデオ会議参加者の声）</li>
+                <li><strong>収集しないデータ</strong>: スクリーンショット、画面画像、ビデオフレーム、その他の視覚的コンテンツ</li>
+            </ul>
+
+            <h3>収集目的</h3>
+            <p>画面収録権限で取得した音声データは、以下の目的でのみ使用されます：</p>
+            <ul>
+                <li><strong>会議の文字起こし</strong>: デバイス上のWhisper AIモデルを使用して、音声をテキストに変換</li>
+                <li><strong>会議の要約</strong>: 文字起こしテキストから要約を生成（オプション機能、OpenAI API使用）</li>
+                <li><strong>個人の記録</strong>: ユーザーが会議内容を振り返り、参照できるようにする</li>
+            </ul>
+
+            <h3>データの共有</h3>
+            <ul>
+                <li><strong>音声録音</strong>: 第三者と共有されることはありません。すべての音声ファイルはユーザーのMac上にのみ保存されます。</li>
+                <li><strong>文字起こし</strong>: 第三者と共有されることはありません。文字起こし処理はデバイス上で完全に行われます。</li>
+                <li><strong>要約（オプション）</strong>: ユーザーが要約機能を有効にし、自身のOpenAI APIキーを設定した場合のみ、文字起こしテキスト（音声ではない）がOpenAI APIに送信されます。</li>
+            </ul>
+
+            <h3>データの保存場所</h3>
+            <p>画面収録で取得したすべてのデータは、<strong>ユーザーのMac上にのみローカル保存</strong>されます。当社はクラウドストレージやバックエンドサーバーを運用しておらず、データが当社のサーバーに保存されることはありません。</p>
+
+            <h2>5. その他の権限</h2>
+            <p>本アプリは画面収録権限に加え、以下のシステム権限を必要とします：</p>
             <table>
                 <tr>
                     <th>権限</th>
                     <th>用途</th>
-                </tr>
-                <tr>
-                    <td>画面収録</td>
-                    <td>システム音声（会議アプリの音声）を録音するために必要</td>
                 </tr>
                 <tr>
                     <td>マイク</td>
@@ -320,7 +349,7 @@
             </table>
             <p>これらの権限で取得したデータは、本アプリの機能を提供する目的でのみ使用され、外部に送信されることはありません（要約機能を除く）。</p>
 
-            <h2>5. データの削除</h2>
+            <h2>6. データの削除</h2>
 
             <h3>録音データの削除</h3>
             <p>録音履歴から個別のデータを削除できます。削除されたデータは完全に消去され、復元できません。</p>
@@ -328,10 +357,10 @@
             <h3>アプリのアンインストール</h3>
             <p>アプリをアンインストールしても、保存されたデータ（音声、文字起こし、要約ファイル）は削除されません。完全に削除する場合は、保存先フォルダから手動で削除してください。</p>
 
-            <h2>6. 第三者への提供</h2>
+            <h2>7. 第三者への提供</h2>
             <p>本アプリは、お客様の個人情報を第三者に販売、貸与、または共有しません。</p>
 
-            <h2>7. セキュリティ</h2>
+            <h2>8. セキュリティ</h2>
             <p>本アプリは以下のセキュリティ対策を講じています：</p>
             <ul>
                 <li>すべてのデータはローカルに保存され、暗号化されたファイルシステム上で管理されます</li>
@@ -339,10 +368,10 @@
                 <li>アプリはサンドボックス環境で動作し、許可されたフォルダ以外へのアクセスは制限されています</li>
             </ul>
 
-            <h2>8. 子どものプライバシー</h2>
+            <h2>9. 子どものプライバシー</h2>
             <p>本アプリは13歳未満の子どもを対象としていません。13歳未満の子どもから意図的に個人情報を収集することはありません。</p>
 
-            <h2>9. プライバシーポリシーの変更</h2>
+            <h2>10. プライバシーポリシーの変更</h2>
             <p>本プライバシーポリシーは予告なく変更される場合があります。変更があった場合は、本ページを更新し、最終更新日を変更します。</p>
 
         </div>
